# crewAI

./: mkdocs.yml
docs/guides/crews/: chat-demo.mdx
examples/: chat_demo.py
xtreme/: README.md  pyproject.toml
xtreme/src/xtreme/: crew.py  main.py
