[project]
name = "xtreme"
version = "0.1.0"
description = "xtreme using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
xtreme = "xtreme.main:run"
run_crew = "xtreme.main:run"
train = "xtreme.main:train"
replay = "xtreme.main:replay"
test = "xtreme.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
